--- a/styleish.css
+++ b/styleish.css
@@ -261,6 +261,11 @@ form.aui.top-label .field-group>label,
   border: 1px solid #555;
 }
   
+.aui-message.hint, .aui-message-hint, .aui-message.info, .aui-message-info {
+  background: #333;
+  border: 1px solid #555;
+}
+  
 .tt-empty-timesheet-state img {
   filter: invert(100%);
   -webkit-filter: invert(100%);
@@ -582,6 +587,18 @@ h1, h2, h3, h4, h5, .ghx-readonly, .ghx-detail-issue, .ghx-name, .aui-dropdown2.
 .panelHeader, div.wiki-edit .panelHeader {
   background-color: #555 !important;
 }
+  
+.wiki-edit-toolbar, .wiki-edit-toolbar .wiki-edit-color-indicator {
+  border: 1px solid #555;
+}
+
+.wiki-edit-toolbar a.wiki-edit-operation-color {
+  border-right-color: #555;
+}
+
+.wiki-edit-toolbar .aui-buttons + .aui-buttons {
+  border-left: 1px solid #555;
+}
 
 .editable-field form.aui .field-group .aui-ss, .editable-field form.aui .field-group .jira-multi-select, .editable-field form.aui .field-group .group, .editable-field form.aui .field-group input[type=text], .editable-field form.aui .field-group select, .editable-field form.aui .field-group textarea, .editable-field form.aui .field-group .text, .tempo-comment, .text, .textarea, .select2-input, textarea {
   background-color: #333 !important;
@@ -817,13 +834,11 @@ nav.aui-header {
 .aui-dropdown2.aui-style-default {
   background-color: #222;
   border: 1px solid #555;
-}
-  
+} 
 table.aui > tbody > tr, table.aui > thead {
   background: #222;
   border-bottom: 1px solid #666;
 }
-
 .wiki-edit-toolbar {
   background-color: #333;
 }
@@ -833,7 +848,6 @@ table.aui > tbody > tr, table.aui > thead {
   border: 1px solid #666;
   box-shadow: none;
 }
-
 .jira-icon-button {
   -webkit-filter: grayscale(100%) brightness(25%);
   filter: grayscale(100%) brightness(75%);
@@ -841,7 +855,6 @@ table.aui > tbody > tr, table.aui > thead {
 .ghx-controls-filters dd a:hover {
   border-color: #555;
 }
-
 .ghx-controls-filters dd a.ghx-active {
   background: #888;
 }
@@ -909,4 +922,38 @@ table.aui > tbody > tr, table.aui > thead {
 }
 .alertHeader {
 	display: none;
+}
+.calendar, .calendar table {
+  background-color: #222;
+}
+div.calendar, .calendar {
+  border: 1px solid #555;
+  box-shadow: none;
+}
+.calendar .headrow {
+  background-color: #333;
+}
+.calendar .headrow td {
+  border-top: 1px solid #555;
+}
+.calendar .daynames td.wn, .calendar .daynames td, .calendar table .wn {
+  background-color: #333;
+  color: #ccc;
+}
+.calendar .rowhilite, .calendar .rowhilite .wn {
+  background-color: #444;
+}
+.calendar tbody td.selected {
+  background-color: #555;
+  color: #ccc;
+}
+.calendar td.hilite, .calendar .combo .hilite, .calendar td.time span.hilite {
+  background-color: #555;
+}
+.calendar td.time {
+  background-color: #222;
+  border-top: 1px solid #555;
+}
+.calendar td.time span, .calendar td.time .colon {
+  background-color: #222;
 }
